# CrossPlatformCPPTemplate

./: .gitignore  BaseFactory.h  CMakeLists.txt  README.md  WindowsDerived.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Base.h  BaseFactory.h  Platforms.h
src/: WindowsDerived.cpp  main.cpp
